--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -7,3 +7,6 @@ $muted-colour: #88C425;
 $focus-colour: $secondary-colour;
 $success-colour: $primary-colour;
 $error-colour: red;
+
+$modal-z: 10000;
+$sticky-z: 1;
