--- a/src/index.scss
+++ b/src/index.scss
@@ -190,11 +190,6 @@ table {
   display: none;
 }
 
-.react-datepicker {
-  left: -40px;
-}
-
-
 @media only screen and (max-width: 768px) {
   .hide-tablet {
     display: none;
